# yasic

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md
.github/workflows/: build_and_test.yml  clang_tidy.yml  pages.yml  sanitize.yml
data/licences/: yasic_mit_licence.txt
docs/: CMakeLists.txt
extra/packaging/debian/: postinst.in  postrm.in  template.desktop.in
extra/packaging/windows/: licence.rtf
tools/cmake/: CompilerFlagsTarget.cmake  InstallBuildTools.cmake  StageConfig.cmake
tools/cmake/package/: Linux.cmake  Windows.cmake
tools/cmake/presets/: base.json  checks.json  compilers.json  documentation.json  generators.json  platforms.json  sanitizer_workflows.json
tools/cmake/toolchains/: asan.toolchain.cmake  clang-cl.toolchain.cmake  clang.toolchain.cmake  gcc.toolchain.cmake  lsan.toolchain.cmake  tsan.toolchain.cmake  ubsan.toolchain.cmake  visual-studio-cl.toolchain.cmake
tools/doxygen/: header.html
yasic/: CMakeLists.txt  main.cpp
yasic/logging/: CMakeLists.txt
yasic/logging/include/yasic/logging/: log_service.h  null_log_service.h  spdlog_service.h
yasic/logging/source/yasic/logging/: spdlog_service.cpp
yasic/service/: CMakeLists.txt
yasic/service/include/yasic/service/: service.h  service_locator.h
yasic/service/tests/: CMakeLists.txt  service_locator_test.cpp
